--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,14 @@
     <navbar-app></navbar-app>
     
     <main>
-        <div class="container">
-            <div class="row row-cols-1 row-cols-md-5 g-4">
+        <div class="container detail-card">
+            <detail-comic></detail-comic>
+            <div class="row row-cols-1 row-cols-md-5 g-4 comic-card">
                 <comics-card></comics-card>
                 <!-- <h5 class="card-title text-center" data-dbid=${}>${comic.title}</h5> -->
             </div>
         </div>
-        <detail-comic></detail-comic>
+        
     </main>
     <footer>
 
