--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,15 @@
     <navbar-app></navbar-app>
     
     <main>
-        <div class="container detail-card">
-            <detail-comic></detail-comic>
+        <div class="container">
             <div class="row row-cols-1 row-cols-md-5 g-4 comic-card">
                 <comics-card></comics-card>
             </div>
         </div>
     </main>
+    <div class="container container-detail">
+        <detail-comic></detail-comic>
+    </div>
     <footer>
 
     </footer>
