--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,6 @@
     <div class="container container-detail">
         <detail-comic></detail-comic>
     </div>
-    <footer>
-
-    </footer>
-
+    <footer-app></footer-app>
 </body>
 </html>
